<resources>
    <string name="app_name">Evemento</string>
    <string name="title_fragment_poll_list">Polls</string>
    <string name="title_fragment_new_poll">Add Poll</string>
    <string name="title_fragment_task_list">Tasks</string>
    <string name="title_fragment_comments_list">Comments</string>
    <string name="title_fragment_guests_list">Guests</string>
    <string name="title_activity_maps">Transporte</string>
    <string name="default_event_title">Title</string>
    <string name="default_description_text">Add a description?</string>
    <string name="default_time_text">When?</string>
    <string name="default_location_text">Where?</string>
    <string name="default_task_list_text">Tasks</string>
    <string name="default_poll_list_text">Polls</string>
    <string name="default_guests_text">Guests</string>
    <string name="default_ride_text">Rides</string>
    <string name="default_comments_text">Comments</string>
    <string name="title_activity_transport_list">TransportList</string>
    <string name="title_activity_transport_detail">TransportDetail</string>
    <string name="fragment_transport_show_list">Show list</string>
    <string name="drawer_menu_title_events">Eventos</string>
    <string name="auth_logged_in">Logged in!</string>
    <string name="auth_unknown_login_response">Unknown error occurred</string>
    <string name="auth_signing_in">Logging in…</string>
    <string name="auth_no_internet_connection">No internet connection…</string>
    <string name="auth_login_cancelled">Login cancelled.</string>
    <string name="auth_logged_out">Logged out!</string>
    <string name="auth_error_not_logged_out">An error occurred, not logged out.</string>
    <string name="api_error_fetching_data">An error occurred while fetching data from server.</string>
    <string name="api_error_pushing_data">An error occurred while sending data to server.</string>
    <string name="api_error_deleting_data">An error occurred while deleting data from server.</string>
    <string name="network_unknown_error">Unknown network error occurred</string>
    <string name="DateTimeFormat">EEE dd MMM yyyy HH:mm</string>
    <string name="DateFormat">EEE dd MMM yyyy</string>
    <string name="TimeFormat">HH:mm</string>
    <string name="autocompleteError">There was an error loading places, please try again later</string>
    <string name="errorLoadingImage">There was an error loading the image, please check the url or try again later</string>
    <string name="errorLoadingComments">There was an error loading the comments, please try again later</string>
    <string name="errorLoadingGuests">There was an error loading the guests, please try again later</string>
    <string name="errorLoadingRides">There was an error loading the rides, please try again later</string>
    <string name="errorLoadingTasks">There was an error loading the tasks, please try again later</string>
    <string name="errorAddComments">There was an error adding the comment, please try again later</string>
    <string name="errorDeleteComments">There was an error deleting the comment, please try again later</string>
    <string name="errorDeleteEvent">There was an error deleting the event, please try again later</string>
    <string name="accept">Accept</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="invite">Invite</string>
    <string name="uninvite">Uninvite</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="selectImage">Select Image</string>
    <string name="removeImage">Remove Image</string>
    <string name="imageDialogTitle">Edit image</string>
    <string name="commentDialogTitle">Comment:</string>
    <string name="guestDialogTitle">Mail Guest:</string>
    <string name="titleValidation">Events should have title!</string>
    <string name="locationValidation">Events should have a place!</string>
    <string name="taskValidation">Tasks should have a description!</string>
    <string name="hint_transport_build_available_slots">Add available slots</string>
    <string name="hint_transport_build_available_location">Where is the start point?</string>
    <string name="transport_build_total_slots_validation">Transport should have available slots!</string>
    <string name="transport_build_location_validation">Transport should have starting point!</string>
    <string name="youAlreadyInvited">You are already invited!</string>
    <string name="cannotInviteGuest">Cannot invite someone who is already a guest!</string>
    <string name="usertMustHaveAccount">The guest must have an account!</string>
    <string name="deleteTaskConfirmation">Are you sure you want to delete this task?</string>
    <string name="deleteCommentConfirmation">Are you sure you want to delete this comment?</string>
    <string name="deleteGuestConfirmation">Are you sure you want to uninvite this guest?</string>
    <string name="deleteEventConfirmation">Are you sure you want to delete this event?</string>
    <string name="createPollSuccessfully">Poll created successfully!</string>
    <string name="errorDuplicatePollAnswer">All answers must be different</string>
    <string name="errorEmptyPollField">This field can\'t be empty!</string>
    <string name="imagePickerError">There was an error picking image.</string>
    <string name="uploadingImage">Uploading image...</string>
    <string name="imageUploaded">Image uploaded successfully.</string>
    <string name="empty" />
    <string name="pleaseWait">Please wait...</string>
    <string name="availableSlots">Available slots: </string>
    <string name="pollAnswerWithVotes">%1s - %2d de %3d</string>
    <string name="addTask">Add task</string>
    <string name="taskDescription">Task Description</string>
    <string name="responsible">Responsible:\ </string>
    <string name="noOneInCharge">No one in charge</string>
    <string name="beInCharge">"Do you want to be in charge?"</string>
    <string name="abandonTask">"Do you want to abandon this task?"</string>
    <string name="alreadyInCharge">"Someone is already in charge"</string>
    <string name="checkPermissions">Please check the app permissions.</string>


</resources>
