<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/locationElementLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        app:errorEnabled="true"
        android:hint=" "
        >

        <android.support.design.widget.TextInputEditText style="@style/EventElementComponent"
            android:id="@+id/locationElement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/default_location_text"
            android:drawableStart="@drawable/ic_location_on_grey_24dp"
            android:paddingBottom="3dp"
            android:background="@null"
            android:focusable="false"
            />

    </android.support.design.widget.TextInputLayout>
    <TextView style="@style/EventElementComponent"
        android:id="@+id/latitudeElement"
        android:visibility="gone"
        />
    <TextView style="@style/EventElementComponent"
        android:id="@+id/longitudeElement"
        android:visibility="gone"
        />

    <TextView style="@style/EventElementComponent"
        android:id="@+id/timeElement"
        android:drawableStart="@drawable/ic_time_grey_24dp"
        />

    <include layout="@layout/event_element_time"
        android:id="@+id/editTimeElement"
        android:visibility="gone"
        />

    <EditText style="@style/EditableEventElementComponent"
        android:id="@+id/descriptionElement"
        android:drawableStart="@drawable/ic_description_grey_24dp"
        android:hint="@string/default_description_text"
        />

    <TextView style="@style/EventElementComponent"
        android:id="@+id/guestElement"
        android:drawableStart="@drawable/ic_guests_grey_24dp"
        android:text="@string/default_guests_text"
        />
    <TextView style="@style/EventElementComponent"
        android:id="@+id/rideElement"
        android:drawableStart="@drawable/ic_ride_grey_24dp"
        android:text="@string/default_ride_text"
        />
    <TextView style="@style/EventElementComponent"
        android:id="@+id/taskElement"
        android:drawableStart="@drawable/ic_task_grey_24dp"
        android:text="@string/default_task_list_text"
        />
    <TextView style="@style/EventElementComponent"
        android:id="@+id/pollElement"
        android:drawableStart="@drawable/ic_poll_grey_24dp"
        android:text="@string/default_poll_list_text"
        />
    <TextView style="@style/EventElementComponent"
        android:id="@+id/commentElement"
        android:drawableStart="@drawable/ic_comment_grey_24dp"
        android:text="@string/default_comments_text"
        />
</LinearLayout>